--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <!-- Hero section -->
     <section class="hero">
       <!-- Sidebar -->
-      <div>
+      <div class="hero-sidebar">
         <!-- Logo -->
         <a href="index.html">
           <img src="images/logo.svg" alt="Logo" />
         </a>
         <!-- Social media links -->
         <div>
-          <ul>
-            <li>
+          <ul class="hero-social-media">
+            <li class="hero-social-media-element">
               <a
                 class="social-media-link"
                 href="https://youtube.com"
@@ -45,7 +45,7 @@
                 >Youtube</a
               >
             </li>
-            <li>
+            <li class="hero-social-media-element">
               <a
                 class="social-media-link"
                 href="https://instagram.com"
@@ -55,15 +55,15 @@
               >
             </li>
           </ul>
-          <img src="images/Rectangle_hero.svg" alt="|" />
+          <img src="images/divider.svg" alt="-" />
         </div>
       </div>
-      <!-- Hero content -->
-      <div class="hero-content">
+      <!-- Hero container -->
+      <div class="hero-container">   
         <!-- Header -->
-        <header>
-          <nav>
-            <ul>
+        <header class="hero-header">
+          <nav class="hero-navbar">
+            <ul class="hero-navbar-list">
               <li><a class="nav-link" href="#about">About</a></li>
               <li>
                 <a class="nav-link" href="#prices">Services and Prices</a>
@@ -71,45 +71,46 @@
               <li><a class="nav-link" href="#barbers">Barbers</a></li>
               <li><a class="nav-link" href="#contacts">Contacts</a></li>
             </ul>
-            <div>
-              <address>
-                <a class="address-phone-number" href="tel: +380441111111"
-                  >+38 044 111 11 11</a
-                >
-              </address>
-              <button
-                class="book-service-button book-service-button-light"
-                type="button"
+
+          </nav>
+          <div class="hero-header-cta">
+            <address class="hero-header-address">
+              <a class="address-phone-number" href="tel: +380441111111"
+                >+38 044 111 11 11</a
               >
+            </address>
+            <button
+              class="book-service-button book-service-button-light"
+              type="button"
+            >
                 book a Service
               </button>
-            </div>
-          </nav>
+          </div>
         </header>
         <!-- Title -->
-        <section>
-          <div>
+        <section class="hero-content">
+          <div class="subtitle-container">
             <img src="./images/divider.svg" alt="-" />
             <h3 class="subtitle subtitle-light">
               A hair salon for men in Kyiv
             </h3>
           </div>
-          <h1 class="hero-header">BarberShop</h1>
-          <p>
+          <h1 class="hero-title">BarberShop</h1>
+          <p class="hero-description">
             We are experts in trendy men's haircuts. <br />
             We work quickly, carefully, and tastefully.
           </p>
         </section>
         <!-- Control buttons -->
-        <div>
+        <div class="hero-control-buttons">
           <button
-            class="hero-control-buttons hero-control-buttons-dark"
+            class="hero-control-button hero-control-button-dark"
             type="button"
           >
             Back
           </button>
           <button
-            class="hero-control-buttons hero-control-buttons-light"
+            class="hero-control-button hero-control-button-light"
             type="button"
           >
             Next
@@ -137,7 +138,7 @@
         </div>
         <!-- About content -->
         <div>
-          <div>
+          <div class="subtitle-container">
             <img src="./images/divider.svg" alt="-" />
             <h3 class="subtitle subtitle-dark">About</h3>
           </div>
@@ -222,20 +223,20 @@
 
       <!-- Why us section -->
       <section>
-        <ul>
-          <li>
+        <ul class="why-us-cards">
+          <li class="why-us-card">
             <h3>600<sup>+</sup></h3>
             <p>Satisfied Customers per Day</p>
           </li>
-          <li>
+          <li class="why-us-card why-us-card-shifted">
             <h3>50<sup>+</sup></h3>
             <p>Excellent Service Awards</p>
           </li>
-          <li>
+          <li class="why-us-card">
             <h3>20<sup>+</sup></h3>
             <p>The Best Barbers of Kyiv</p>
           </li>
-          <li>
+          <li class="why-us-card why-us-card-shifted">
             <h3>100<sup>+</sup></h3>
             <p>Gifts for Regular Customers</p>
           </li>
