--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/hero-styles.css">
     <link rel="stylesheet" href="./css/about-styles.css">
     <link rel="stylesheet" href="./css/services-and-prices-styles.css">
+    <link rel="stylesheet" href="./css/why-us-styles.css">
 
     <link rel="stylesheet" href="./css/barbers-styles.css">
     <link rel="stylesheet" href="./css/contact-styles.css">
@@ -245,67 +246,65 @@
       </section>
 
       <!-- Why us section -->
-      <section>
+      <section class="why-us">
         <ul class="why-us-cards">
           <li class="why-us-card">
-            <h3>600<sup>+</sup></h3>
-            <p>Satisfied Customers per Day</p>
+            <h3 class="why-us-card-title">600<sup>+</sup></h3>
+            <p class="why-us-card-description">Satisfied Customers per Day</p>
           </li>
           <li class="why-us-card why-us-card-shifted">
-            <h3>50<sup>+</sup></h3>
-            <p>Excellent Service Awards</p>
+            <h3 class="why-us-card-title">50<sup>+</sup></h3>
+            <p class="why-us-card-description">Excellent Service Awards</p>
           </li>
           <li class="why-us-card">
-            <h3>20<sup>+</sup></h3>
-            <p>The Best Barbers of Kyiv</p>
+            <h3 class="why-us-card-title">20<sup>+</sup></h3>
+            <p class="why-us-card-description">The Best Barbers of Kyiv</p>
           </li>
           <li class="why-us-card why-us-card-shifted">
-            <h3>100<sup>+</sup></h3>
-            <p>Gifts for Regular Customers</p>
+            <h3 class="why-us-card-title">100<sup>+</sup></h3>
+            <p class="why-us-card-description">Gifts for Regular Customers</p>
           </li>
         </ul>
         <div>
           <!-- Subtitle -->
-          <div>
-          <svg width="60" height="1">
-            <use href="./images/icons.svg#icon-divider" />
-          </svg>
-            <h3>Old school</h3>
-            <h3 class="subtitle subtitle-dark">Old school</h3>
+          <div class="about-content">
+            <div class="subtitle-container">
+              <svg width="60" height="1" class="divider-dark">
+                <use href="./images/icons.svg#icon-divider" />
+              </svg>
+              <h3 class="subtitle subtitle-dark">Old school</h3>
+            </div>
+            <h2 class="header header-dark">Why do they come to us?</h2>
+            <p>
+              Only good things are said about us. But it is better to see and feel
+              1 time than to read 10 times.
+            </p>
           </div>
-          <h2>Why do they come to us?</h2>
-          <h2 class="header header-dark">Why do they come to us?</h2>
-          <p>
-            Only good things are said about us. But it is better to see and feel
-            1 time than to read 10 times.
-          </p>
         </div>
       </section>
 
       <!-- Our barbers section -->
       <section id="barbers" class="barbers">
         <!-- Subtitle -->
-        <div>
-          <svg width="60" height="1">
+        <div class="subtitle-container">
+          <svg width="60" height="1" class="divider-dark">
             <use href="./images/icons.svg#icon-divider" />
           </svg>
-          <h3>for true connoisseurs of the atmosphere</h3>
           <h3 class="subtitle subtitle-dark">
-            for true connoisseurs of the atmosphere
+          for true connoisseurs of the atmosphere
           </h3>
         </div>
-        <h2>Our Barbers</h2>
-        <h2 class="header header-dark"></h2>
-        <ul>
-          <li>
+        <h2 class="header header-dark barbers-head">Our Barbers</h2>
+        <ul class="barbers-list">
+          <li class="barbers-list-item">
             <img
               src="./images/barbers-john.jpg"
               alt="John Smith"
               width="370"
               height="346"
             />
-            <h4>John Smith</h4>
-            <p>Extreme barber</p>
+            <h4 class="barbers-list-item-title">John Smith</h4>
+            <p class="barbers-list-item-description">Extreme barber</p>
             <ul class="barbers-social-media-list">
               <li>
                 <a href="" class="barbers-social-media-icon">
@@ -333,26 +332,77 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="barbers-list-item">
             <img
               src="./images/barbers-michele.jpg"
               alt="Michele Doe"
               width="370"
               height="346"
             />
-            <h4>Michele Doe</h4>
-            <p>Extreme barber</p>
+            <h4 class="barbers-list-item-title">Michele Doe</h4>
+            <p class="barbers-list-item-description">Extreme barber</p>
+            <ul class="barbers-social-media-list">
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a>
+              </li>
+            </ul>
           </li>
-          <li>
+          <li class="barbers-list-item">
             <img
               src="./images/barbers-alan.jpg"
               alt="Alan Black"
               width="370"
               height="346"
             />
-            <h4>Alan Black</h4>
-            <p>Extreme barber</p>
-
+            <h4 class="barbers-list-item-title">Alan Black</h4>
+            <p class="barbers-list-item-description">Extreme barber</p>
+            <ul class="barbers-social-media-list">
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a>
+              </li>
+              <li>
+                <a href="" class="barbers-social-media-icon">
+                <svg width="20" height="20" >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a>
+              </li>
+            </ul>
               </li>
             </ul>
           </li>
