--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 >
               </li>
             </ul>
-            <svg width="60" height="1" class="divider-dark">
+            <svg width="60" height="1" class="divider-dark hero-divider">
               <use href="./images/icons.svg#icon-divider" />
             </svg>
           </div>
