--- a/index.html
+++ b/index.html
@@ -521,12 +521,12 @@
 
       <!-- Footer section -->
       <footer class="footer">
-        <p>&copy; Copyright 2022</p>
-        <div>
+        <p class="footer-copy">&copy; Copyright 2022</p>
+        <div class="footer-social-container">
           <svg width="60" height="1" class="divider-dark">
             <use href="./images/icons.svg#icon-divider" />
           </svg>
-          <ul>
+          <ul class="footer-social">
             <li>
               <a
                 class="social-media-link c"
