--- a/index.html
+++ b/index.html
@@ -175,14 +175,12 @@
           <img
             src="./images/about-img-1.jpg"
             alt="Barber trims beard"
-            width="270"
-            height="445"
+            class="about-image"
           />
           <img
             src="./images/about-img-2.jpg"
             alt="Barber cuts hair"
-            width="270"
-            height="445"
+            class="about-image"
           />
           <!-- About content -->
           <div class="about-content">
@@ -229,7 +227,7 @@
           </h2>
           <!-- Prices lists -->
           <div class="services-price-lists">
-            <ul class="services-price-list services-price-list-light">
+            <ul class="services-price-list services-price-list-1">
               <li class="services-price-list-item">
                 <span>Men's Haircut</span>
                 <span class="services-price-list-divider"></span>
@@ -251,7 +249,7 @@
                 <span>from 200 UAH</span>
               </li>
             </ul>
-            <ul class="services-price-list services-price-list-dark">
+            <ul class="services-price-list services-price-list-2">
               <li class="services-price-list-item">
                 <span>Trainee Haircut</span>
                 <span class="services-price-list-divider"></span>
@@ -303,7 +301,7 @@
               <p class="why-us-card-description">Gifts for Regular Customers</p>
             </li>
           </ul>
-          <div>
+          <div class="why-us-title-container">
             <!-- Subtitle -->
             <div class="about-content">
               <div class="subtitle-container">
